Move fromBytes generation logic into XjbTypes and XjbStructureContents