@@ -6,6 +6,7 @@ import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
 import org.freedesktop.xjbgen.xml.XjbModule;
+import org.freedesktop.xjbgen.xml.type.complex.content.XjbFieldStructureContent;
 
 public class XjbXidType extends XjbTypeElement<XjbModule> {
 
@@ -17,15 +18,17 @@ public class XjbXidType extends XjbTypeElement<XjbModule> {
     @Override
     @Contract(pure = true)
     public @NotNull String toString() {
-        return String.format(
-            "@%1$s.%2$s int",
-            getModule().getClassName(),
-            getSrcName());
+        return "@%1$s.%2$s int".formatted(getModule().getClassName(), getSrcName());
     }
 
     @Override
     public int byteSize() {
         return BYTE_SIZE;
+    }
+
+    @Override
+    public @NotNull String getFromBytesSrc(@NotNull final XjbFieldStructureContent content) {
+        return "%1$s.%1$s = %3$s.getInt();";
     }
 
     @Override
