@@ -1,7 +1,6 @@
 package org.freedesktop.xjbgen.xml.type;
 
 import java.util.List;
-import java.util.StringJoiner;
 
 import javax.xml.bind.annotation.XmlAttribute;
 import javax.xml.bind.annotation.XmlElement;
@@ -14,6 +13,9 @@ import org.jetbrains.annotations.NotNull;
 
 import org.freedesktop.xjbgen.xml.XjbElement;
 import org.freedesktop.xjbgen.xml.XjbModule;
+import org.freedesktop.xjbgen.xml.type.complex.content.XjbFieldStructureContent;
+
+import static java.util.stream.Collectors.joining;
 
 public final class XjbXidUnion extends XjbTypeElement<XjbModule> {
 
@@ -26,22 +28,21 @@ public final class XjbXidUnion extends XjbTypeElement<XjbModule> {
     @Override
     @Contract(pure = true)
     public @NotNull String toString() {
-        final String xidUnionValue;
-        if (types.size() == 1) {
-            xidUnionValue = "\"" + getSrcName() + "\"";
-        } else {
-            final var joiner = new StringJoiner(", ", "{", "}");
-            for (Type type : types)
-                joiner.add("\"" + type.toString() + "\"");
-            xidUnionValue = joiner.toString();
-        }
-        return String.format("@XidUnion(%s) int", xidUnionValue);
+        final String xidUnionValue = (types.size() == 1)
+            ? "\"" + getSrcName() + "\""
+            : "{\"" + types.stream().map(Type::toString).collect(joining("\", \"")) + "\"}";
+        return "@XidUnion(%s) int".formatted(xidUnionValue);
     }
 
     // <editor-fold desc="XjbType">
     @Override
     public int byteSize() {
         return XjbXidType.BYTE_SIZE;
+    }
+
+    @Override
+    public @NotNull String getFromBytesSrc(@NotNull final XjbFieldStructureContent content) {
+        return "%1$s.%2$s = %3$s.getInt();".formatted(content.getSrcName());
     }
 
     @Override
